2011-10-06	Gedare Bloom <giddyup44@yahoo.com>

	PR 1919/bsp
	* shared/startup/bsppredriverhook.c: New file.

2011-06-20	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Remove superfluous EXTRA_DIST.

2011-03-21	Sebastian Huber <sebastian.huber@embedded-brains.de>

	PR 1770/bsps
	* shared/console/conscfg.c: Rely on default device file registration.

2011-02-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Require autoconf-2.68, automake-1.11.1.

2010-11-16	Gedare Bloom <giddyup44@yahoo.com>

	PR 1691/bsps
	* shared/clock/ckinit.c: The sparc64/shared/clock driver has
	a bug that causes nested timer interrupts to not be serviced,
	which leads to non-preemptive behavior especially when dispatching
	work from the timer ISR.

2010-11-15  Gedare Bloom <giddyup44@yahoo.com>

	PR 1691/bsps
	* shared/include/traptable.h, shared/start/trap_table.S,
	shared/startup/linkcmds: Create a dummy trap table
	that jumps to the firmware trap table for default trap handlers.

2010-08-26  Gedare Bloom <giddyup44@yahoo.com>

	PR 1691/bsps
	* shared/include/traptable.h: Double the size of TABLE_SIZE to copy
	code branched to from the trap table.

2010-08-03	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* shared/startup/linkcmds: Add .gcc_except_table*.

2010-07-27  Gedare Bloom <giddyup44@yahoo.com>

	PR 1634/bsps
	* shared/console/conscfg.c: Add BSP_poll_char.

2010-06-17	Joel Sherrill <joel.sherrill@oarcorp.com>

	* .cvsignore: New file.

2010-06-17	Joel Sherrill <joel.sherrill@oarcorp.com>

	* ChangeLog, Makefile.am, acinclude.m4, configure.ac, shared/asm/asm.S,
	shared/clock/ckinit.c, shared/console/conscfg.c,
	shared/helenos/LICENSE, shared/helenos/README,
	shared/helenos/boot/genarch/balloc.c,
	shared/helenos/boot/genarch/ofw.c,
	shared/helenos/boot/genarch/ofw_tree.c,
	shared/helenos/boot/generic/string.c,
	shared/helenos/boot/include/align.h,
	shared/helenos/boot/include/balloc.h,
	shared/helenos/boot/include/gentypes.h,
	shared/helenos/boot/include/main.h,