@@ -123,6 +123,10 @@ setstack:
 	set SYM(StackStart), %sp
 	add %sp, -STACK_BIAS, %sp
 
+  /* BSP-specific pre-bootcard initializations */
+  call SYM(_BSP_init)
+  nop
+
 	setx ofw_cif, %l0, %l1
  
 	call ofw_init		! initialize OpenFirmware
@@ -131,9 +135,6 @@ setstack:
   call bootstrap
   nop
 
-  /* BSP-specific pre-bootcard initializations */
-  call SYM(_BSP_init)
-  nop
 
   /* Set up ISR handler for interrupt enable/disable */
 	setx SYM(syscall), %l0, %o1
